--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
 	"devDependencies": {
-		"@types/react": "^18.2.70",
-		"@types/react-dom": "^18.2.22",
-		"eslint": "^8.57.0",
+		"@types/react": "^18.3.1",
+		"@types/react-dom": "^18.3.0",
 		"eslint-plugin-react": "^7.34.1",
-		"npm-check-updates": "^16.14.18",
+		"npm-check-updates": "^16.14.20",
 		"prettier": "^3.2.5",
-		"puppeteer": "^22.6.1",
+		"puppeteer": "^22.7.1",
 		"pwa-asset-generator": "^6.3.1",
-		"tailwindcss": "^3.4.1",
-		"tsx": "^4.7.1",
-		"typescript": "^5.4.3",
-		"vite": "^5.2.6"
+		"tailwindcss": "^3.4.3",
+		"tsx": "^4.8.0",
+		"typescript": "^5.4.5",
+		"update-browserslist-db": "^1.0.13",
+		"vite": "^5.2.10"
 	},
 	"dependencies": {
-		"@fortawesome/free-brands-svg-icons": "^6.5.1",
-		"@fortawesome/free-solid-svg-icons": "^6.5.1",
+		"@fortawesome/free-brands-svg-icons": "^6.5.2",
+		"@fortawesome/free-solid-svg-icons": "^6.5.2",
 		"@fortawesome/react-fontawesome": "^0.2.0",
-		"@nextui-org/react": "^2.2.10",
+		"@nextui-org/react": "^2.3.6",
 		"@vitejs/plugin-react": "^4.2.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-hot-toast": "^2.4.1",
-		"vite-plugin-pwa": "^0.19.7"
+		"vite-plugin-pwa": "^0.20.0"
 	},
 	"type": "module",
 	"scripts": {
-		"build": "npm urn tw && vite build && npm urn gen-screenshots && npm urn gen-icons",
+		"build": "npx update-browserslist-db npm urn tw && npm urn gen-screenshots && vite build && npm urn gen-icons",
 		"dev": "npx vite",
 		"fmt": "prettier -w .",
 		"gen-icons": "tsx scripts/generateIcons.ts",
