--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-	"singleQuote": true,
-	"useTabs": true,
-	"tabWidth": 2,
-	"trailingComma": "none",
 	"arrowParens": "avoid",
 	"bracketSpacing": true,
-	"semi": true
+	"jsxSingleQuote": true,
+	"semi": true,
+	"singleQuote": true,
+	"tabWidth": 2,
+	"trailingComma": "none",
+	"useTabs": true
 }
