--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 	},
 	"type": "module",
 	"scripts": {
-		"build": "npx update-browserslist-db npm urn tw && npm urn gen-screenshots && vite build && npm urn gen-icons",
+		"build": "npx update-browserslist-db && npm urn tw && npm urn gen-screenshots && vite build && npm urn gen-icons",
 		"dev": "npx vite",
 		"fmt": "prettier -w .",
 		"gen-icons": "tsx scripts/generateIcons.ts",
